# riaps-timesync

./: .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Jenkinsfile  LEGAL  README.md  build.sh  package.sh  pyproject.toml  version.sh
DEBIAN/: postinst  postrm  prerm  riaps-timesync-amd64.control  riaps-timesync-arm64.control  riaps-timesync-armhf.control
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/sphinx/: conf.py  index.rst  requirements.txt
python/: .gitignore  setup.py  test_timesync.py
python/riaps_ts/: riaps_ts.py
src/: chrony.c  chrony.h  riaps_ts.c  riaps_ts.h  test_timesync.c
timesync/: timesyncctl  timesyncd
timesync/config/: master.hooks  master.services  slave.hooks  slave.services  standalone.hooks  standalone.services
timesync/config/common/: 90-riaps-timesync.conf  90-riaps-timesync.rules  CHRONOCAPE-00A0.dtbo  blacklist-riaps-timesync.conf  chrony.conf  gpsd  phc2sys.service  ptp4l-master.conf  ptp4l-slave.conf  ptp4l.service  riaps-timesync.logrotate  timesyncd.service
timesync/config/master.root/etc/default/: gpsd
timesync/config/master.root/etc/linuxptp/: ptp4l.conf
timesync/config/master.root/etc/logrotate.d/: riaps-timesync
timesync/config/master.root/etc/rsyslog.d/: 90-riaps-timesync.conf
timesync/config/master.root/lib/systemd/system/: phc2sys.service
timesync/config/slave.root/etc/linuxptp/: ptp4l.conf
timesync/config/slave.root/etc/modprobe.d/: blacklist-riaps-timesync.conf
timesync/config/slave.root/lib/systemd/system/: ptp4l.service
timesync/config/standalone.root/etc/chrony/: chrony.conf
timesync/config/standalone.root/etc/systemd/system/: timesyncd.service
timesync/config/standalone.root/etc/udev/rules.d/: 90-riaps-timesync.rules
timesync/config/standalone.root/lib/firmware/: CHRONOCAPE-00A0.dtbo
